# test-workspace

./: .gitignore  LICENSE-MIT  README.md
workspace/: Cargo.toml
workspace/binary/: Cargo.toml
workspace/binary/src/: main.rs
workspace/folder/: Cargo.toml
workspace/folder/lib1/: Cargo.toml
workspace/folder/lib2/: Cargo.toml
workspace/member/: Cargo.toml
workspace/member/src/: lib.rs
workspace/other/: Cargo.toml
workspace/question/lib/: Cargo.toml
workspace/question/lib1/: Cargo.toml
workspace/question/lib12/: Cargo.toml
workspace/question/lib2/: Cargo.toml
workspace/recursive/exclude1/: Cargo.toml
workspace/recursive/include1/: Cargo.toml
workspace/recursive/include1/exclude2/: Cargo.toml
workspace/recursive/include1/include2/: Cargo.toml
workspace/set/lib1/: Cargo.toml
workspace/set/libe/: Cargo.toml
workspace/set/libf/: Cargo.toml
workspace/set/libf/src/: lib.rs
workspace/set/libg/: Cargo.toml
workspace/set/libg/src/: lib.rs
workspace/src/: lib.rs
workspace/wildcard/exclude/: Cargo.toml
workspace/wildcard/include/: Cargo.toml
